# geo-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  smithery-config-schema.json  smithery.yaml
.github/: LISTING_COPY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  dataset_request.yml  feature_request.yml
geo_mcp/: __main__.py  admin.py  auth.py  config.py  middleware.py  oauth.py  server.py  signup.py
geo_mcp/data_access/: cog.py  postgis.py  projections.py
geo_mcp/tools/: _area.py  _validators.py  boreholes.py  building.py  coal_mining.py  crime.py  deprivation.py  designated_sites.py  distance.py  elevation.py  elevation_summary.py  epc.py  flood.py  flood_assessment.py  flood_historic.py  flood_planning.py  flood_probability.py  flood_re.py  flood_summary.py  flood_surface_water.py  forward_geocoding.py  geocoding.py  geology.py  greenspace.py  (+9 more)
init-db/: 01-roles-schemas.sh  02-extensions.sql
logo/: README.md
migrations/: 001_meta_customers_keys.sql  002_onspd_geom_osgb.sql  003_pending_signups.sql  004_pending_signups_dedupe.sql  005_oauth.sql
scripts/: backup.sh  migrate.sh  restore-drill.sh  smithery-sync-metadata.sh
tests/: conftest.py  test_auth.py  test_boreholes.py  test_building.py  test_coal_mining.py  test_crime.py  test_deprivation.py  test_designated_sites.py  test_distance.py  test_elevation.py  test_elevation_summary.py  test_epc.py  test_flood.py  test_flood_assessment.py  test_flood_historic.py  test_flood_planning.py  test_flood_probability.py  test_flood_re.py  test_flood_summary.py  test_flood_surface_water.py  test_forward_geocoding.py  test_geocoding.py  test_geology.py  test_greenspace.py  test_healthcare.py  test_heritage.py  test_inspire_polygon.py  test_middleware.py  test_oauth.py  test_price_paid.py  test_property.py  test_rate_limit.py  test_rivers.py  test_roads.py  test_schools.py  test_signup.py  test_signup_routes.py  test_transforms.py  test_validators.py
(+78 files in other folders)
