[project]
name = "geo-mcp"
version = "0.1.0"
description = "UK-specialist geospatial MCP server"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastmcp>=2.0",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    # Geospatial
    "pyproj>=3.6",
    "rasterio>=1.3",
    "numpy>=1.26",       # elevation_summary aggregates
    # HTTP (live upstream probes + signup email + Starlette routes)
    "httpx>=0.27",       # tools/{boreholes,coal_mining,flood_surface_water}, signup
    "starlette>=0.37",   # HTML responses + middleware bases
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "openpyxl>=3.1",     # ingest/imd XLSX → CSV conversion
]

[project.scripts]
geo-mcp = "geo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geo_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]
